h1. CHANGELOG

h2. 2.5.1 April 26, 2014

* use 'rails_apps_testing' gem to configure RSpec and friends in 'tests4' recipe
* install 'binding_of_caller' gem properly for various Ruby versions

h2. 2.5.0 April 22, 2014

* add 'tests4' recipe for simplified setup of test framework
* remove devise_invitable option (pending fix of https://github.com/scambra/devise_invitable/issues/447)
* remove Mongoid as an option for Rails 4.1 (pending further community support)

h2. 2.4.44 April 12, 2014

* use 'example.com' for domain_name in secrets.yml file
* fix for rails-omniauth secrets.yml file
* fix email recipe to restore correct behavior for 'none' option

h2. 2.4.43 April 12, 2014

* add pry as an option (contributed by Stefan Wienert)
* add recipe for deployment with Capistrano (contributed by Stefan Wienert)

h2. 2.4.42 April 11, 2014

* add 'domain_name' to 'config/secrets.yml' file

h2. 2.4.41 April 11, 2014

* updates for Rails 4.1.0 final
* fix for retrieving postgres host value in prefs (contributed by Atsushi Hamtaro Ishida)

h2. 2.4.40 April 4, 2014

* add MRI 2.1 to platforms for binding_of_caller gem (contributed by Chad Ingram)

h2. 2.4.39 April 3, 2014

* update 'megatest' feature to Rails 4.1 and Ruby 2.1 (contributed by Mark D. Blackwell)

h2. 2.4.38 March 7, 2014

* support option for 'Devise confirmable' with Rails 4.1 and Pundit (fixes #287)
* send emails in development mode (reverts #272)

h2. 2.4.37 March 6, 2014

* no need to specify foundation-rails version (foundation-rails 5.2.0.0 fixes #281)

h2. 2.4.36 March 2, 2014

* fix error when 'SMTP' is selected as an email option (fixes #286)

h2. 2.4.35 March 1, 2014

* update 'rails-bootstrap' example application for Rails 4.1

h2. 2.4.34 March 1, 2014

* update 'rails-foundation' example application for Rails 4.1

h2. 2.4.33 February 27, 2014

* add 'rails-devise-pundit' example application to 'apps4' recipe

h2. 2.4.32 February 26, 2014

* update 'rails-omniauth' example application for Rails 4.1