@@ -51,6 +51,9 @@ add_gem 'pg' if prefer :database, 'postgresql'
 gsub_file 'Gemfile', /gem 'mysql2'.*/, ''
 add_gem 'mysql2' if prefer :database, 'mysql'
 
+## Gem to set up controllers, views, and routing in the 'apps4' recipe
+add_gem 'rails_apps_pages', :group => :development if prefs[:apps4]
+
 ## Template Engine
 if prefer :templates, 'haml'
   add_gem 'haml-rails'
